# webook-html-generator

./: .env_sample  .gitignore  Dockerfile  README.md  api.Dockerfile  api.py  cloudbuild.yml  pyproject.toml
webook_html_generator/: api.py  common.py  config.py  data_handler.py  generator.py  main.py  schema.py
webook_html_generator/html/: index.html  output.html
webook_html_generator/template/: _index.html  mmg.html  person.html  welcome.html  whatson.html  whatson2.html  whatson4.html
webook_html_generator/template/mmg/: index.html
webook_html_generator/template/mmg/css/: nasjonalmuseet-hva-skjer.css
webook_html_generator/template/whatson/css/: nasjonalmuseet-hva-skjer.css
