[tool.poetry]
name = "webook-html-generator"
version = "0.1.0"
description = ""
authors = ["zmarusic <zeljkomarusic@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8poet"
requests = "^2.27.1"
Jinja2 = "^3.0.3"
pedantic = "^1.9.0"
python-dotenv = "^0.19.2"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
